base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "18000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "18000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "18000"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: "197.35.212.72/32,196.221.125.140/32,4.184.73.175/32,20.218.126.24/32"

  name: shop-brain-app
  namespace: default

spec:
  tls:
  - hosts:
    - shopbrain-app-base.germanywestcentral.cloudapp.azure.com
    secretName: shopbrain-app-base-tls    
  rules:
  - host: shopbrain-app-base.germanywestcentral.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: forecast-app-svc-ingress
            port: 
              number: 80
